--- a/Paginas/paginaAcesso.css
+++ b/Paginas/paginaAcesso.css
@@ -60,6 +60,8 @@ ul li img {
 ul li p {
     width: 100%;
     height: 100%;
+    font-size: large;
+    line-height: 23px;
 }
 
 section{
