--- a/Paginas/paginaPost.css
+++ b/Paginas/paginaPost.css
@@ -15,7 +15,9 @@ body main{
     display: flex;
     justify-content: center;
     align-items: center;  
-    gap: 50px;  
+    gap: 50px; 
+    width: 100%; 
+    overflow: hidden;
 }
 body img{
     width: 100%;
@@ -32,7 +34,8 @@ main h2{
     font-style: normal;
     font-weight: 600;
     font-size: small;
-    line-height: 48px;
+    line-height: 20px;
+
     color: #FFFFFF;
 
     max-width: 80%;
@@ -43,6 +46,8 @@ main h2{
     justify-content: center;
     align-items: center;
     border-radius: 10px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     padding-right: 15px;
     padding-left: 15px;
 
